--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.1",
+    "react-native-fs": "^2.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
