--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'testeAPIs' do
 
   pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'testeAPIsTests' do
     inherit! :complete
     # Pods for testing
