--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.1",
     "react-native-fs": "^2.18.0",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-image-picker": "^4.1.1"
   },
   "devDependencies": {
