--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-camera-hooks": "^0.5.1",
     "react-native-fs": "^2.18.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
-    "react-native-image-picker": "^4.1.1"
+    "react-native-image-picker": "^4.1.1",
+    "react-native-sensors": "^7.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
